--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ body, html{
 #donebtn{
     margin: 10px;
     padding: 10px;
-    
+    background-color: green;
 }
 #logo{
     width: 450px;
@@ -60,4 +60,8 @@ body, html{
 p{
     font-size: 16px;
     font-weight: bold;
+}
+#restartbtn{
+    background-color: lawngreen;
+    padding: 10px;
 }
